--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,4 +3,12 @@
 
 body {
   background-color: $red;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  flex-direction: column;
+  font-size: 52px;
+  gap: 0.5em;
 }
